--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
     "name": "weather-get-local-coastal-weatherstations",
     "version": "0.0.1",
-    "description": "",
+    "description": "Find nearby coastal weatherstations",
     "main": "index.js",
     "author": "Justin Fargione",
     "license": "ISC",
